relm4-macros/tests/ui/compile-fail/dead_code.stderr
error[E0609]: no field `_gtk_window_0` on type `TestWidgets`
  --> tests/ui/compile-fail/dead_code.rs:29:32
   |
29 |         let _window = &widgets._gtk_window_0;
   |                                ^^^^^^^^^^^^^ unknown field
